# lunachess

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  LunaChessCpp.sln  readme.md
LunaChess/: CMakeLists.txt
LunaChess/src/: lunachess.h
LunaChess/src/ai/: aibitboards.cpp  aibitboards.h  basicevaluator.cpp  endgame.cpp  endgame.h  movepicker.cpp  movepicker.h  openingbook.cpp  openingbook.h  scorestable.cpp  scorestable.h
LunaChess/src/core/: bitboard.cpp  bitboard.h  bits.h  debug.cpp  debug.h  defs.h  lunachess.cpp  move.cpp  move.h  piece.cpp  piece.h  position.cpp  position.h  square.cpp  square.h  staticlist.h  strutils.cpp  strutils.h  zobrist.h
LunaChessCLI/: CMakeLists.txt  LunaChessCLI.vcxproj  LunaChessCLI.vcxproj.filters
LunaChessCLI/src/: app.cpp  app.h  appmode.h  console.cpp  console.h  error.h  evalmode.cpp  evalmode.h  perftmode.cpp  perftmode.h  playmode.cpp  playmode.h  ucimode.cpp  ucimode.h
LunaChessCpp/: LunaChessCpp.vcxproj  LunaChessCpp.vcxproj.filters  cpp.hint
LunaChessCpp/src/ai/: aibitboards.cpp  basicevaluator.cpp  basicevaluator.h  evaluator.h  movepicker.h  scorestable.cpp  scorestable.h  tranpositiontable.h  transpositiontable.cpp
LunaChessCpp/src/core/: bitboard.cpp  bitboard.h  bits.h  debug.cpp  lunachess.cpp  move.cpp  move.h  piece.h  square.cpp  square.h  staticlist.h  types.h  zobrist.cpp
LunaTest/: CMakeLists.txt  LunaTest.vcxproj  LunaTest.vcxproj.filters  cpp.hint
LunaTest/src/: testarray.cpp  testmain.cpp  tests.h
LunaTest/src/tests/: bitboards.cpp  perft.cpp  pieces.cpp  positions.cpp  staticlist.cpp
ext/: CMakeLists.txt
ext/include/: rang.h
ext/include/incbin/: incbin.h
ext/include/popl/: popl.h
scripts/: generate-tuner-file.py
scripts/datagen/: gen-tuning-data.py  settings.json
scripts/sprt/: .gitignore  readme.md  sprt.py
src/: bitboard.cpp  bitboard.h  bits.h  chessgame.cpp  chessgame.h  clock.h  debug.cpp  debug.h  endgame.cpp  endgame.h  input.cpp  input.h  lunachess.cpp  lunachess.h  main.cpp  move.cpp  move.h  movegen.h  perft.cpp  perft.h  piece.h  position.cpp  position.h  posutils.cpp  posutils.h  serial.cpp  serial.h  staticlist.h  strutils.h  types.cpp  types.h  uci.cpp  utils.cpp  utils.h  zobrist.h
src/ai/: aibitboards.cpp  aibitboards.h  aimovefactory.cpp  aimovefactory.h  aimovegen.cpp  aimovegen.h  basicevaluator.cpp  basicevaluator.h  classicevaluator.cpp  classicevaluator.h  evaluator.h  genetic.cpp  genetic.h  hotmap.cpp  hotmap.h  quiescevaluator.cpp  quiescevaluator.h  search.cpp  search.h  texel.cpp  texel.h  timemanager.cpp  timemanager.h  transpositiontable.cpp  transpositiontable.h
src/ai/classiceval/: aibitboards.h  classicevaluator.cpp  classicevaluator.h  hotmap.cpp  hotmap.h  texel.cpp  texel.h
src/ai/neural/: neuraleval.cpp  neuraleval.h  neuralgenetic.cpp  neuralgenetic.h  nn.cpp  nn.h
src/ai/neuraleval/: neuraleval.cpp  neuralgenetic.h  nn.h
src/luna/: bitboard.cpp  bitboard.h  bits.h  chessgame.cpp  chessgame.h  debug.cpp  debug.h  endgame.cpp  endgame.h  lock.h  lunachess.cpp  lunachess.h  move.cpp  move.h  movegen.h  openingbook.cpp  openingbook.h  perft.cpp  perft.h  piece.cpp  piece.h  position.cpp  position.h  pst.cpp  pst.h  square.cpp  staticanalysis.cpp  staticanalysis.h  staticlist.h  strutils.cpp  strutils.h  threadpool.cpp  threadpool.h  types.cpp  types.h  utils.cpp  utils.h  zobrist.cpp  zobrist.h
src/luna/ai/: aimovefactory.cpp  aimovefactory.h  aitypes.h  evaluator.h  movecursor.cpp  movecursor.h  quiescevaluator.cpp  quiescevaluator.h  search.cpp  search.h  searchtrace.cpp  searchtrace.h  timemanager.cpp  timemanager.h  transpositiontable.cpp  transpositiontable.h
src/luna/ai/classiceval/: aibitboards.cpp  aibitboards.h  classicevaluator.cpp  classicevaluator.h  evalscores.cpp  evalscores.h  hotmap.cpp  hotmap.h  tuning.cpp  tuning.h
src/luna/ai/hce/: hce.cpp  hce.h  hceweights.cpp  hceweights.h  tuning.cpp  tuning.h  weights.json
src/luna/ai/neuraleval/: evalnn.cpp  evalnn.h  neuraleval.cpp  neuraleval.h  neuralgenetic.cpp  neuralgenetic.h  nn.h  nnlayer.cpp  nnlayer.h
src/luna/ai/nnue/: nnue.cpp  nnue.h  nnueevaluator.cpp  nnueevaluator.h
src/lunacli/: main.cpp  uci.cpp  uci.h
src/lunatest/: lunatest.h  main.cpp  test.h  testlist.cpp
src/lunatest/tests/: endgame.cpp  perfttests.cpp  template.cpp
src/lunatest/tests/classiceval/: classiceval.cpp  colorcomplex.cpp  kingexposure.cpp  mobility.cpp  nearkingatks.cpp  passerandchains.cpp
src/lunatest/tests/movegen/: perft.cpp  perfttests.cpp  pseudolegal.cpp
src/lunatest/tests/staticanalysis/: backwardpawns.cpp  blockingpawns.cpp  connectedPawns.cpp  connectedpawns.cpp  outposts.cpp  passedPawns.cpp  passedpawns.cpp
src/lunatuner/: main.cpp  priorities.json
